--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Primitive</title>
-  <link rel="stylesheet" href="https://yn-ui-portfolio.github.io/portfolio/style.css"/>
+  <link rel="stylesheet" href="https://yn-ui.github.io/portfolio/style.css"/>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 
 </head>
