--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
     </ul>
   </div>
 </header>
-
+  
 <div class="main-wrapper">
     <div class="main-visual">    
       <ul>
-        <li class="slide active"><img src="./img/main-visual01.png" alt="background-img01"></li>
-        <li class="slide "><img src="./img/main-visual02.png" alt="background-img02"></li>
-        <li class="slide"><img src="./img/main-visual03.png" alt="background-img03"></li>
+        <li class="slide active"><img src="https://user-images.githubusercontent.com/72715705/107315645-78fa0c80-6ada-11eb-8bbe-daf5e4b42611.png"></li>
+        <li class="slide "><img src="https://user-images.githubusercontent.com/72715705/107315657-7dbec080-6ada-11eb-8a78-3127fb9fb881.png"></li>
+        <li class="slide"><img src="https://user-images.githubusercontent.com/72715705/107315666-80b9b100-6ada-11eb-90cd-314c3297dda1.png"></li>
       </ul>
     </div>
 
@@ -51,8 +51,8 @@
   <div class="inner top-inner">
 
     <div class="top-img">
-      <img class="top-img01" src="./img/text-img01.png" alt="">
-      <img class="top-img02" src="./img/text-img02.png" alt="">
+      <img class="top-img01" src="https://user-images.githubusercontent.com/72715705/107315674-83b4a180-6ada-11eb-8a77-087e27f4557c.png" alt="">
+      <img class="top-img02" src="https://user-images.githubusercontent.com/72715705/107315680-87482880-6ada-11eb-94dc-a309df1ce504.png" alt="">
     </div>
 
     <div class="top-text">
