--- a/index.html
+++ b/index.html
@@ -64,8 +64,6 @@
   </div>
 </div>
 
-
-　　　
-<script src="./js/script.js"></script>
+<script type="text/javascript" src="https://yn-ui.github.io/portfolio/script.js"></script>
 </body>
 </html>
